x.y.z
=====

New features:

* Fix GitHub Issue #67: Button to drag cards

Bug fixes:

Other:

1.11.0
======

New features:

* Fix GitHub Issue #59: Enable text entry in newly created nodes
* Fix GitHub Issue #61: System dialogs are not localized
* Fix GitHub Issue #55: Ability to copy the node without connection

1.10.0 - "Summer Serafina"
==========================

New features:

* Fix GitHub Issue #58: Add selection rectangle for nodes
  * With Ctrl pressed one can now draw a selection rectangle
* Add Italian translations

1.9.0 - "Arrow Amalgam"
=======================

New features:

* Fix GitHub Issue #53: Add option to set corner radius
* Fix GitHub Issue #32: Add mechanism to set arrow direction
  * Right-click on edge shows a context menu with options to set single arrow, double arrow, hide arrows, and reverse the direction
* Fix GitHub Issue #25: Add a way to delete edges
  * Right-click on edge opens context menu with a delete option

Bug fixes:

* Fix GitHub Issue #54: Moving a non-selected node moves selection group

Other:

* Snap: Fix desktop-qt5 not working as a remote part anymore
* Snap: Fix mouse cursor theme

1.8.0 - "Mighty Move"
=====================

New features:

* Fix GitHub Issue #26: Multi-selection for nodes
  * Ctrl + Left click selects/deselects nodes
  * Ctrl + Left click on background clears selection

Bug fixes:

* Tests
  * Fix edge-specific undo tests
  * Fix node-specific undo tests

Other:

* Tests
  * Add redo tests

1.7.0 - "Merry Misc"
====================

New features:

* French translations
* Fix GitHub Issue #18: Setting for edge colors

Bug fixes:

* Fix GitHub Issue #47: Cannot open context menu if design is empty
* Fix GitHub Issue #46: Zoom to fit is broken on certain aspect ratios

Other:

* Disable zoom to fit if no nodes
* Disable export if no nodes

1.6.0 - "Grid Grudge"
=====================

New features:

* Fix GitHub Issue #39: Add snap to grid option